--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".me.Login">
 
         </activity>
+        <activity android:name=".home.HomeDetail">
+
+        </activity>
     </application>
 
 </manifest>
